--- a/H1EmuLauncher/Language/StringResources.en-EN.xaml
+++ b/H1EmuLauncher/Language/StringResources.en-EN.xaml
@@ -45,14 +45,14 @@
     <system:String x:Key="item48">Checking for updates...</system:String>
     <system:String x:Key="item49">Some information may be missing.</system:String>
     <system:String x:Key="item50">Please make sure your emails are open for the 2-Auth code after logging into your Steam account.</system:String>
-    <system:String x:Key="item51">Select a folder where you would like the game to download to.</system:String>
+    <system:String x:Key="item51">Please select a folder where you would like to download the game to.</system:String>
     <system:String x:Key="item52">You don't seem to have server files installed.\n\nInstall these in the Settings menu.</system:String>
     <system:String x:Key="item53">Error launching server:</system:String>
     <system:String x:Key="item54">Downloading...</system:String>
     <system:String x:Key="item55">Using app branch: {0}</system:String>
     <system:String x:Key="item56">Processing depot {0} - {1}</system:String>
     <system:String x:Key="item57">Pre-allocating space...</system:String>
-    <system:String x:Key="item58">Game version not supported by H1Emu.\n\nPlease remember to use game version either 15th January 2015 or 22nd December 2016.\n\nYou need to download one of these versions using this launcher with your Steam account that has Just Survive ownership.</system:String>
+    <system:String x:Key="item58">Game version not supported by H1Emu.\n\nPlease remember to use game version either 15th January 2015, 22nd December 2016 (Just Survive) or 23rd February 2017 (King of the Kill).\n\nYou need to download one of these versions using this launcher with your Steam account that has Just Survive ownership.</system:String>
     <system:String x:Key="item59">Username...</system:String>
     <system:String x:Key="item60">Password...</system:String>
     <system:String x:Key="item61">View full details of the update...</system:String>
@@ -65,10 +65,10 @@
     <system:String x:Key="item68">View files...</system:String>
     <system:String x:Key="item69">• Game Version Not Detected •</system:String>
     <system:String x:Key="item70">Detecting game version...</system:String>
-    <system:String x:Key="item71">Game version detected: 15th January 2015</system:String>
+    <system:String x:Key="item71">Game version detected: 15th January 2015.</system:String>
     <system:String x:Key="item72">• Game Version Not Supported •</system:String>
     <system:String x:Key="item73">Please wait for the current tasks to complete.</system:String>
-    <system:String x:Key="item74">Game version detected: 22nd December 2016</system:String>
+    <system:String x:Key="item74">Game version detected: 22nd December 2016.</system:String>
     <system:String x:Key="item75">Directory</system:String>
     <system:String x:Key="item76">Deleting old patch...</system:String>
     <system:String x:Key="item77">Auth Code</system:String>
@@ -81,12 +81,14 @@
     <system:String x:Key="item91">Processing...</system:String>
     <system:String x:Key="item92">OK</system:String>
     <system:String x:Key="item95">There was an error installing the 2015 patch:</system:String>
-    <system:String x:Key="item97">There was an error installing the 2016 patch:</system:String>
+    <system:String x:Key="item96">There was an error installing the 2016 patch:</system:String>
+    <system:String x:Key="item97">There was an error installing the KotK patch:</system:String>
     <system:String x:Key="item99">Unzipping patch files...</system:String>
     <system:String x:Key="item100">Deleting .zip file...</system:String>
     <system:String x:Key="item101">Done. (Elapsed time:</system:String>
     <system:String x:Key="item102">Patch files for game version 2015 have been installed.</system:String>
-    <system:String x:Key="item104">Patch files for game version 2016 have been installed.</system:String>
+    <system:String x:Key="item103">Patch files for game version 2016 have been installed.</system:String>
+    <system:String x:Key="item104">Patch files for the KotK have been installed.</system:String>
     <system:String x:Key="item105">Installing latest server...</system:String>
     <system:String x:Key="item107">There was an error installing the latest server:</system:String>
     <system:String x:Key="item108">The latest server has been installed.</system:String>
@@ -115,11 +117,11 @@
     <system:String x:Key="item136">Translators</system:String>
     <system:String x:Key="item137">(Are you connected to the internet?)</system:String>
     <system:String x:Key="item138">\n\n(Files will not be deleted)</system:String>
-    <system:String x:Key="item139">H1Emu Server</system:String>
+    <system:String x:Key="item139">H1Emu Servers</system:String>
     <system:String x:Key="item140">Singleplayer</system:String>
     <system:String x:Key="item141">New Server...</system:String>
     <system:String x:Key="item142">Exception thrown:</system:String>
-    <system:String x:Key="item143">Server name already exists in list.</system:String>
+    <system:String x:Key="item143">This server name already exists in the server list.</system:String>
     <system:String x:Key="item144">Server Name...</system:String>
     <system:String x:Key="item145">Server IP...</system:String>
     <system:String x:Key="item146">Cannot delete this entry.</system:String>
@@ -135,9 +137,7 @@
     <system:String x:Key="item157">The latest version of the server is an in development build, be warned that it may be unstable and cause crashes.\n\nWould you like to continue?</system:String>
     <system:String x:Key="item158">Welcome to H1Emu!</system:String>
     <system:String x:Key="item159">BEFORE YOU BEGIN, please note that this project only supports the following game versions:</system:String>
-    <system:String x:Key="item160">15th January 2015</system:String>
     <system:String x:Key="item161">and</system:String>
-    <system:String x:Key="item162">22nd December 2016</system:String>
     <system:String x:Key="item163">Please</system:String>
     <system:String x:Key="item164">DO NOT</system:String>
     <system:String x:Key="item165">use the latest Steam version of the game or any other version that was not mentioned above as it will not work.</system:String>
@@ -165,4 +165,9 @@
     <system:String x:Key="item187">If this error persists, try downloading and running the installation file manually.</system:String>
     <system:String x:Key="item188">RE-PATCHING</system:String>
     <system:String x:Key="item189">KILL</system:String>
+    <system:String x:Key="item190">Game version detected: 23rd February 2017 (King of the Kill).</system:String>
+    <system:String x:Key="item191">Your H1EmuLauncher has been minimised to the system tray.</system:String>
+    <system:String x:Key="item192">Delete</system:String>
+    <system:String x:Key="item193">Copy</system:String>
+    <system:String x:Key="item194">Exit</system:String>
 </ResourceDictionary>
