--- a/H1EmuLauncher/Language/StringResources.zh-cn.xaml
+++ b/H1EmuLauncher/Language/StringResources.zh-cn.xaml
@@ -45,14 +45,14 @@
     <system:String x:Key="item48">正在检查更新...</system:String>
     <system:String x:Key="item49">某些信息可能会丢失。</system:String>
     <system:String x:Key="item50">登录Steam账号后请正确输入你的Steam令牌。</system:String>
-    <system:String x:Key="item51">选择您希望将游戏下载到的文件夹。</system:String>
+    <system:String x:Key="item51">请选择您要将游戏下载到的文件夹。</system:String>
     <system:String x:Key="item52">你没有安装单机服务器。\n\n请到左下角游戏配置菜单中安装单机服务器。</system:String>
     <system:String x:Key="item53">单机服务器启动错误：</system:String>
     <system:String x:Key="item54">正在下载...</system:String>
     <system:String x:Key="item55">使用游戏分支：{0}</system:String>
     <system:String x:Key="item56">处理数据包 {0} - {1}</system:String>
     <system:String x:Key="item57">预分配空间...</system:String>
-    <system:String x:Key="item58">H1Emu 不支持游戏版本。\n\n请记住使用 2015 年 1 月 15 日或 2016 年 12 月 22 日的游戏版本。\n\n您需要使用具有 Just Survive 所有权的 Steam 帐户使用此启动器下载这些版本之一。</system:String>
+    <system:String x:Key="item58">H1Emu 不支持游戏版本。\n\n请记住使用2015年1月15日、2016年12月22日（Just Survive）或2017年2月23日（King of the Kill）的游戏版本。\n\n您需要使用具有 Just Survive 所有权的 Steam 帐户使用此启动器下载这些版本之一。</system:String>
     <system:String x:Key="item59">用户名...</system:String>
     <system:String x:Key="item60">这里输入Steam密码...</system:String>
     <system:String x:Key="item61">查看最新版本的详细信息...</system:String>
@@ -65,10 +65,10 @@
     <system:String x:Key="item68">打开游戏目录</system:String>
     <system:String x:Key="item69">• 未检测到游戏版本 •</system:String>
     <system:String x:Key="item70">正在检测游戏版本...</system:String>
-    <system:String x:Key="item71">检测到游戏版本：2015年1月15日</system:String>
+    <system:String x:Key="item71">检测到游戏版本：2015年1月15日。</system:String>
     <system:String x:Key="item72">• 不支持的游戏版本 •</system:String>
     <system:String x:Key="item73">请耐心等待当前任务完成。</system:String>
-    <system:String x:Key="item74">检测到游戏版本：2016年12月22日</system:String>
+    <system:String x:Key="item74">检测到游戏版本：2016年12月22日。</system:String>
     <system:String x:Key="item75">请正确选择H1Z1.exe文件所在的目录</system:String>
     <system:String x:Key="item76">正在删除旧的补丁文件...</system:String>
     <system:String x:Key="item77">令牌</system:String>
@@ -81,12 +81,14 @@
     <system:String x:Key="item91">正在处理中...</system:String>
     <system:String x:Key="item92">确定</system:String>
     <system:String x:Key="item95">安装2015版本的补丁文件出错：</system:String>
-    <system:String x:Key="item97">安装2016版本的补丁文件出错：</system:String>
+    <system:String x:Key="item96">安装2016版本的补丁文件出错：</system:String>
+    <system:String x:Key="item97">安装KotK版本的补丁文件出错：</system:String>
     <system:String x:Key="item99">正在解压文件...</system:String>
     <system:String x:Key="item100">正在删除压缩文件...</system:String>
     <system:String x:Key="item101">完成。 (运行时间：</system:String>
     <system:String x:Key="item102">游戏2015版本的补丁文件已经安装完成。</system:String>
-    <system:String x:Key="item104">游戏2016版本的补丁文件已经安装完成。</system:String>
+    <system:String x:Key="item103">游戏2016版本的补丁文件已经安装完成。</system:String>
+    <system:String x:Key="item104">KotK的补丁文件已安装。</system:String>
     <system:String x:Key="item105">正在安装最新版单机服务器...</system:String>
     <system:String x:Key="item107">安装最新版的单机服务器出错：</system:String>
     <system:String x:Key="item108">已经完成最新版单机服务器的安装。</system:String>
@@ -115,7 +117,7 @@
     <system:String x:Key="item136">翻译人员</system:String>
     <system:String x:Key="item137">您是否已连接到互联网？</system:String>
     <system:String x:Key="item138">\n\n(文件不会被删除)</system:String>
-    <system:String x:Key="item139">H1Emu在线服务器</system:String>
+    <system:String x:Key="item139">H1Emu 服务器</system:String>
     <system:String x:Key="item140">单机版（本地）</system:String>
     <system:String x:Key="item141">新建服务器...</system:String>
     <system:String x:Key="item142">运行异常：</system:String>
@@ -131,13 +133,11 @@
     <system:String x:Key="item153">连接到 H1Emu 服务器时，您必须设置帐户密钥。请在游戏配置菜单中贴入认证密钥。</system:String>
     <system:String x:Key="item154">帐户密钥...</system:String>
     <system:String x:Key="item155">帐户密钥</system:String>
-    <system:String x:Key="item156">要在 H1Emu 服务器上玩游戏，您需要设置一个帐户密钥。您可以在H1Emu网站的个人账号信息中获取，网址：</system:String>
+    <system:String x:Key="item156">要在 H1Emu 服务器上玩游戏，您需要设置一个帐户密钥。您可以在 H1Emu 网站的个人账号信息中获取，网址：</system:String>
     <system:String x:Key="item157">请注意：最新版单机服务器为开发版本，可能存在不稳定甚至闪退等问题。\n\n是否继续安装最新版服务器？</system:String>
-    <system:String x:Key="item158">欢迎使用H1Emu！</system:String>
+    <system:String x:Key="item158">欢迎使用 H1Emu！</system:String>
     <system:String x:Key="item159">在您使用本项目前请注意本项目只支持如下两个日期的游戏版本：</system:String>
-    <system:String x:Key="item160">2015年1月15日</system:String>
     <system:String x:Key="item161">与</system:String>
-    <system:String x:Key="item162">2016年12月22日</system:String>
     <system:String x:Key="item163">请</system:String>
     <system:String x:Key="item164">不要</system:String>
     <system:String x:Key="item165">使用steam下载最新或者不是上述版本的游戏，因为除以上两个版本外其他版本不能正常使用。</system:String>
@@ -165,4 +165,9 @@
     <system:String x:Key="item187">如果此错误仍然存​​在，请尝试手动下载并运行安装文件。</system:String>
     <system:String x:Key="item188">重新修补</system:String>
     <system:String x:Key="item189">杀</system:String>
+    <system:String x:Key="item190">检测到的游戏版本：2017 年 2 月 23 日（King of the Kill）。</system:String>
+    <system:String x:Key="item191">您的H1EmuLauncher已最小化到系统托盘。</system:String>
+    <system:String x:Key="item192">删除</system:String>
+    <system:String x:Key="item193">复制</system:String>
+    <system:String x:Key="item194">出口</system:String>
 </ResourceDictionary>
