--- a/H1EmuLauncher/Language/StringResources.bg-BG.xaml
+++ b/H1EmuLauncher/Language/StringResources.bg-BG.xaml
@@ -5,20 +5,20 @@
     <system:String x:Key="item1">Ново обновление е налично,желаете ли да го изтеглите?</system:String>
     <system:String x:Key="item2">Обновление</system:String>
     <system:String x:Key="item3">Версия</system:String>
-    <system:String x:Key="item4">Натисни пусни за пуснеш локалният солов сървър.</system:String>
+    <system:String x:Key="item4">Моля Изчакай</system:String>
     <system:String x:Key="item8">Играй</system:String>
-    <system:String x:Key="item9">Свържи се</system:String>
+    <system:String x:Key="item9">Проверете дали сте избрали правилната директория, съдържаща вашите файлове на играта, това може да стане в менюто Настройки.</system:String>
     <system:String x:Key="item10">Внимание:</system:String>
-    <system:String x:Key="item11">Трябва да притежавате H1Z1: Just Survive на вашият  Steam  акаунт за да изтеглите. This project does not support piracy.</system:String>
+    <system:String x:Key="item11">Трябва да притежавате H1Z1: Just Survive на вашият  Steam  акаунт за да изтеглите. Този проект не поддържа пиратство.</system:String>
     <system:String x:Key="item12">Присъеденете се в общноста на</system:String>
     <system:String x:Key="item13">Грешка при стартирането на играта:</system:String>
     <system:String x:Key="item14">Играта не е открита в избраната категория.</system:String>
     <system:String x:Key="item15">Няма тестови сървър за тази версия на играта. (December 2016)</system:String>
     <system:String x:Key="item16">в избраната директория не се съдържат файлове за пача.\n\nИскате ли да продължите въпреки това? (Няма да можете да влезете във сървъри)</system:String>
-    <system:String x:Key="item17">Влизането в Steam профила е неуспешно :</system:String>
+    <system:String x:Key="item17">Влизането в Steam профила е неуспешно:</system:String>
     <system:String x:Key="item18">Добави</system:String>
     <system:String x:Key="item19">• Статус •</system:String>
-    <system:String x:Key="item21">Got depot key for {0} result: {1}</system:String>
+    <system:String x:Key="item21">Получих депо ключ за {0} резултат: {1}</system:String>
     <system:String x:Key="item23">Инсталирането е готово!</system:String>
     <system:String x:Key="item24">Трябва да инсталирате друга версия.? Натиснете бутона отдолу за да изтеглете отново!</system:String>
     <system:String x:Key="item25">Влизане</system:String>
@@ -34,7 +34,7 @@
     <system:String x:Key="item37">Успещно изтеглихте H1Z1: Just Survive version</system:String>
     <system:String x:Key="item38">Успешно спряхте изтеглянето на H1Z1: Just Survive</system:String>
     <system:String x:Key="item39">ContentDownloaderException:</system:String>
-    <system:String x:Key="item40">Download failed to due to an unhandled exception:</system:String>
+    <system:String x:Key="item40">Изтеглянето не успя поради необработено изключение:</system:String>
     <system:String x:Key="item41">Директория на играта:</system:String>
     <system:String x:Key="item42">RE-PATCH</system:String>
     <system:String x:Key="item43">Последен</system:String>
@@ -45,14 +45,14 @@
     <system:String x:Key="item48">Проверка за актуализации...</system:String>
     <system:String x:Key="item49">Моля изчакайте</system:String>
     <system:String x:Key="item50">Моля  уверете се ,че вашият имейл е отворен за 2 факторната защита след като влезете във вашият акаунт.</system:String>
-    <system:String x:Key="item51">Вие нямате сложена директория.\n\nSet this in the Settings menu.</system:String>
+    <system:String x:Key="item51">Моля, изберете папка, в която искате да изтеглите играта.</system:String>
     <system:String x:Key="item52">Вие нямате сървърните файлове инсталиране.\n\nИнстарирайте ги в Настройки.</system:String>
     <system:String x:Key="item53">Имаше грешка при пускането на сървъра.:</system:String>
     <system:String x:Key="item54">Изтегляне...</system:String>
-    <system:String x:Key="item55">Using app branch: {0}</system:String>
-    <system:String x:Key="item56">Processing depot {0} - {1}</system:String>
-    <system:String x:Key="item57">Pre-allocating space...</system:String>
-    <system:String x:Key="item58">Версията на играта не се подържа от H1Emu.</system:String>
+    <system:String x:Key="item55">Използване на клон на приложението: {0}</system:String>
+    <system:String x:Key="item56">Депо за обработка {0} - {1}</system:String>
+    <system:String x:Key="item57">Предварително разпределяне на място...</system:String>
+    <system:String x:Key="item58">Версията на играта не се поддържа от H1Emu.\n\nМоля, не забравяйте да използвате версията на играта от 15 януари 2015 г., 22 декември 2016 г. (Just Survive) или 23 февруари 2017 г. (King of the Kill).\n\nТрябва да изтеглите една от тези версии като използвате този стартер с вашия акаунт в Steam, който притежава Just Survive.</system:String>
     <system:String x:Key="item59">Steam име</system:String>
     <system:String x:Key="item60">Парола</system:String>
     <system:String x:Key="item61">Вижте пълни подробности за обновлението...</system:String>
@@ -64,29 +64,31 @@
     <system:String x:Key="item67">Не сега</system:String>
     <system:String x:Key="item68">Вижте файловете...</system:String>
     <system:String x:Key="item69">• Версията на играта не е открита •</system:String>
-    <system:String x:Key="item70">Detecting game version...</system:String>
-    <system:String x:Key="item71">Game version detected: 15th January 2015</system:String>
+    <system:String x:Key="item70">Открива се версия на играта...</system:String>
+    <system:String x:Key="item71">Открита версия на играта: 15 януари 2015 г.</system:String>
     <system:String x:Key="item72">• Версята на играта не се подържаG •</system:String>
-    <system:String x:Key="item73">Please wait for the current tasks to complete.</system:String>
-    <system:String x:Key="item74">Версия на играта открита: 22ри Декември 2016</system:String>
+    <system:String x:Key="item73">Моля, изчакайте изпълнението на текущите задачи.</system:String>
+    <system:String x:Key="item74">Версия на играта открита: 22ри Декември 2016.</system:String>
     <system:String x:Key="item75">Директория</system:String>
     <system:String x:Key="item76">Изтриване на стар пач...</system:String>
     <system:String x:Key="item77">Потвърджаващ код код:</system:String>
     <system:String x:Key="item78">Моля, въведете двуфакторния код за удостоверяване, изпратен на вашето приложение Steam.</system:String>
     <system:String x:Key="item79">Моля, въведете двуфакторния код за удостоверяване, изпратен на вашия имейл.</system:String>
-    <system:String x:Key="item80">Saved config before loading</system:String>
-    <system:String x:Key="item84">Couldn't find any depots to download for app {0}</system:String>
-    <system:String x:Key="item85">Depot {0} not listed for app {1}</system:String>
+    <system:String x:Key="item80">Запазена конфигурация преди зареждане</system:String>
+    <system:String x:Key="item84">Не можах да намеря никакви депа за изтегляне за приложение {0}</system:String>
+    <system:String x:Key="item85">Депо {0} не е посочено за приложение {1}</system:String>
     <system:String x:Key="item89">Избраната директория  не е празна.\n\nИзкате ли да продължите въпреки това?</system:String>
     <system:String x:Key="item91">Обработка...</system:String>
-    <system:String x:Key="item92">OK</system:String>
-    <system:String x:Key="item95">Имаше грешка с инсталиране на версия 2015год.:</system:String>
-    <system:String x:Key="item97">Имаше грешка с инсталиране на версия 2016год.:</system:String>
+    <system:String x:Key="item92">Добре</system:String>
+    <system:String x:Key="item95">Имаше грешка с инсталиране на версия 2015год:</system:String>
+    <system:String x:Key="item96">Имаше грешка с инсталиране на версия 2016год:</system:String>
+    <system:String x:Key="item97">Имаше грешка с инсталиране на версия KotKгод:</system:String>
     <system:String x:Key="item99">Разархивиране на файлове за пача...</system:String>
     <system:String x:Key="item100">Изтриване на  .zip файл...</system:String>
     <system:String x:Key="item101">Готово. (Elapsed time:</system:String>
     <system:String x:Key="item102">Файловете за версия 2015 са изтеглени.</system:String>
-    <system:String x:Key="item104">Файлове за версия 2016год. са инсталирани.</system:String>
+    <system:String x:Key="item103">Файлове за версия 2016год. са инсталирани.</system:String>
+    <system:String x:Key="item104">Пач файловете за KotK са инсталирани.</system:String>
     <system:String x:Key="item105">Инстариране на последната версия на сървъра...</system:String>
     <system:String x:Key="item107">There was an error installing the latest server:</system:String>
     <system:String x:Key="item108">The latest server has been installed.</system:String>
@@ -115,11 +117,11 @@
     <system:String x:Key="item136">Преводачи</system:String>
     <system:String x:Key="item137">\n\n(Свързанили сте към интернет?)</system:String>
     <system:String x:Key="item138">\n\n(Файловете няма да бъдат изтрити)</system:String>
-    <system:String x:Key="item139">H1Emu Сървър</system:String>
+    <system:String x:Key="item139">H1Emu Сървъри</system:String>
     <system:String x:Key="item140">Солова Игра</system:String>
     <system:String x:Key="item141">Нов сървър...</system:String>
     <system:String x:Key="item142">Exception thrown: {0}</system:String>
-    <system:String x:Key="item143">Името на сървъра вече съществува Server name already exists in list.</system:String>
+    <system:String x:Key="item143">Името на сървъра вече съществува в списъка.</system:String>
     <system:String x:Key="item144">Име на сървъра...</system:String>
     <system:String x:Key="item145">IP адрес на сървара...</system:String>
     <system:String x:Key="item146">Не можете да изтрете този вход.</system:String>
@@ -128,16 +130,14 @@
     <system:String x:Key="item150">Поправяне</system:String>
     <system:String x:Key="item151">Името на сървара или IP адреса не са верни.</system:String>
     <system:String x:Key="item152">Изтриване на папката на BattlEye ...</system:String>
-    <system:String x:Key="item153">Когато се свързвате към сървърите на H1Emu ви трябва ключ за потвърждение. This can be done in the Settings menu.</system:String>
+    <system:String x:Key="item153">Когато се свързвате към сървърите на H1Emu ви трябва ключ за потвърждение. Това може да стане в менюто Настройки.</system:String>
     <system:String x:Key="item154">Ключ за потвърждение...</system:String>
     <system:String x:Key="item155">Ключ за потвърждение</system:String>
-    <system:String x:Key="item156">За да играете на сървърите  на H1emu, ви трябва ключ за потвърждение. Може да намерите този ключ в профила ви на :</system:String>
+    <system:String x:Key="item156">За да играете на сървърите  на H1emu, ви трябва ключ за потвърждение. Може да намерите този ключ в профила ви на:</system:String>
     <system:String x:Key="item157">Най-новата версия на сървъра се разработва и имайте впредвид че неправилна работа е възможна.\n\nБихте ли желали да продължите?</system:String>
     <system:String x:Key="item158">Добре дошли в H1Emu!</system:String>
     <system:String x:Key="item159">Преди да започнете имайте в предвид, че този проект подържа само следните версии:</system:String>
-    <system:String x:Key="item160">15ти януари 2015</system:String>
     <system:String x:Key="item161">и</system:String>
-    <system:String x:Key="item162">22ри декември 2016</system:String>
     <system:String x:Key="item163">Моля</system:String>
     <system:String x:Key="item164">Недейте</system:String>
     <system:String x:Key="item165">Ако използвате най-новата версия на играта в Steam или друга неспомената няма да работи.</system:String>
@@ -146,11 +146,11 @@
     <system:String x:Key="item168">Сървърът не успя да се пусне, опитайте отново и докладвайте ако проблема продължава.\n\nПреинсталацията на файловете може да оправи проблема.</system:String>
     <system:String x:Key="item169">• Клиентът е направен от @Eavilaswayce •</system:String>
     <system:String x:Key="item170">Хора помогнали финансово</system:String>
-    <system:String x:Key="item171">22nd December 2016 game version, this is more up to date and supported by the project.</system:String>
-    <system:String x:Key="item172">15th January 2015 game version, this doesn't recieve as many updates as 2016 and it may lack features.</system:String>
+    <system:String x:Key="item171">Версия на играта от 22 декември 2016 г., това е по-актуално и се поддържа от проекта.</system:String>
+    <system:String x:Key="item172">Версия на играта от 15 януари 2015 г., това не получава толкова много актуализации като 2016 г. и може да й липсват функции.</system:String>
     <system:String x:Key="item173">Докладвайте грешка...</system:String>
     <system:String x:Key="item174">Тук може да докладвате всякакви грешки които сте срещнали докато използвате сървърните файлове:</system:String>
-    <system:String x:Key="item175">Here you can report any bugs that you have experienced while using the H1Emu Launcher:</system:String>
+    <system:String x:Key="item175">Тук можете да съобщите за грешки, които сте изпитали, докато сте използвали H1Emu Launcher:</system:String>
     <system:String x:Key="item176">изтриване на данните за солова игра.</system:String>
     <system:String x:Key="item177">Не са открити данни за солова игра.</system:String>
     <system:String x:Key="item178">изтриването на данните за солова игра може да разреши проблемите ви , но имайте в предвид че сте изгубите целият си прогрес.\n\nБихте ли желали да продължите?</system:String>
@@ -165,4 +165,9 @@
     <system:String x:Key="item187">Ако грешката продължава да се появява, опитайте да изтеглите файловете ръчно.</system:String>
     <system:String x:Key="item188">ПРЕКРЪПВАНЕ</system:String>
     <system:String x:Key="item189">УБИЙ</system:String>
+    <system:String x:Key="item190">Открита версия на играта: 23 февруари 2017 (King of the Kill).</system:String>
+    <system:String x:Key="item191">Вашият H1EmuLauncher е минимизиран в системната област.</system:String>
+    <system:String x:Key="item192">Изтрий</system:String>
+    <system:String x:Key="item193">Копие</system:String>
+    <system:String x:Key="item194">Изход</system:String>
 </ResourceDictionary>
