--- a/H1EmuLauncher/Language/StringResources.fr-FR.xaml
+++ b/H1EmuLauncher/Language/StringResources.fr-FR.xaml
@@ -9,30 +9,30 @@
     <system:String x:Key="item8">JOUER</system:String>
     <system:String x:Key="item9">Vérifiez que vous avez sélectionné le bon répertoire contenant vos fichiers de jeu, cela peut être fait dans le menu Paramètres.</system:String>
     <system:String x:Key="item10">AVERTISSEMENT:</system:String>
-    <system:String x:Key="item11">Vous devez posséder H1Z1 : Just Survive sur votre compte Steam pour pouvoir le télécharger. Ce projet ne soutient pas le piratage.</system:String>
+    <system:String x:Key="item11">Vous devez posséder H1Z1: Just Survive sur votre compte Steam pour pouvoir le télécharger. Ce projet ne soutient pas le piratage.</system:String>
     <system:String x:Key="item12">Rejoignez la communauté sur</system:String>
-    <system:String x:Key="item13">Erreur au lancement du jeu :</system:String>
+    <system:String x:Key="item13">Erreur au lancement du jeu:</system:String>
     <system:String x:Key="item14">Jeu introuvable dans le répertoire spécifié.</system:String>
     <system:String x:Key="item15">Vous devez posséder H1Z1: Just Survive sur votre compte Steam pour pouvoir télécharger.</system:String>
     <system:String x:Key="item16">Une ou plusieurs erreurs se sont produites:</system:String>
-    <system:String x:Key="item17">Impossible de se connecter à Steam :</system:String>
+    <system:String x:Key="item17">Impossible de se connecter à Steam:</system:String>
     <system:String x:Key="item18">AJOUTER</system:String>
     <system:String x:Key="item19">Assurez-vous de remplir la case Code d'authentification.</system:String>
-    <system:String x:Key="item21">La clé de dépôt pour {0} obtenue , résultat : {1}</system:String>
+    <system:String x:Key="item21">La clé de dépôt pour {0} obtenue , résultat: {1}</system:String>
     <system:String x:Key="item23">Téléchargement terminé !</system:String>
     <system:String x:Key="item24">Vous avez besoin de télécharger une autre version ? Appuyez sur le bouton ci-dessous pour vous connecter à nouveau !</system:String>
     <system:String x:Key="item25">CONNEXION</system:String>
-    <system:String x:Key="item26">Actuellement en cours de téléchargement :</system:String>
+    <system:String x:Key="item26">Actuellement en cours de téléchargement:</system:String>
     <system:String x:Key="item27">version</system:String>
     <system:String x:Key="item28">ANNULER</system:String>
     <system:String x:Key="item31">JANVIER 2015</system:String>
     <system:String x:Key="item32">DÉCEMBRE 2016</system:String>
-    <system:String x:Key="item33">Êtes-vous sûr de vouloir annuler le téléchargement de la version H1Z1 : Just Survive ?</system:String>
+    <system:String x:Key="item33">Êtes-vous sûr de vouloir annuler le téléchargement de la version H1Z1: Just Survive ?</system:String>
     <system:String x:Key="item34">Vous avez besoin de télécharger Just Survive ?</system:String>
     <system:String x:Key="item35">Entrez vos identifiants Steam sur la gauche pour commencer!</system:String>
     <system:String x:Key="item36">Veillez à remplir les cases Nom d'utilisateur et Mot de passe.</system:String>
     <system:String x:Key="item37">Téléchargement terminé H1Z1: Just Survive version</system:String>
-    <system:String x:Key="item38">Téléchargement de la version de H1Z1 : Just Survive annulé avec succès</system:String>
+    <system:String x:Key="item38">Téléchargement de la version de H1Z1: Just Survive annulé avec succès</system:String>
     <system:String x:Key="item39">ContentDownloaderException:</system:String>
     <system:String x:Key="item40">Le téléchargement a échoué en raison d'une exception non gérée:</system:String>
     <system:String x:Key="item41">Répertoire de jeux:</system:String>
@@ -45,14 +45,14 @@
     <system:String x:Key="item48">Vérification des mises à jour...</system:String>
     <system:String x:Key="item49">Certaines informations peuvent être manquantes.</system:String>
     <system:String x:Key="item50">Veuillez vous assurer que vos emails sont ouverts pour le code 2-Auth après vous être connecté à votre compte Steam.</system:String>
-    <system:String x:Key="item51">Sélectionnez un dossier dans lequel vous souhaitez télécharger le jeu.</system:String>
+    <system:String x:Key="item51">Veuillez sélectionner un dossier dans lequel vous souhaitez télécharger le jeu.</system:String>
     <system:String x:Key="item52">Vous ne semblez pas avoir installé les fichiers du serveur.\n\nInstallez-les dans le menu Paramètres.</system:String>
     <system:String x:Key="item53">Erreur de lancement du serveur:</system:String>
     <system:String x:Key="item54">Téléchargement en cours...</system:String>
     <system:String x:Key="item55">Utilisation d'une branche d'application: {0}</system:String>
     <system:String x:Key="item56">Dépôt de traitement {0} - {1}</system:String>
     <system:String x:Key="item57">Pré-attribution de l'espace...</system:String>
-    <system:String x:Key="item58">Version du jeu non prise en charge par H1Emu.\n\nN'oubliez pas d'utiliser la version du jeu du 15 janvier 2015 ou du 22 décembre 2016.\n\nVous devez télécharger l'une de ces versions à l'aide de ce lanceur avec votre compte Steam qui appartient à Just Survive.</system:String>
+    <system:String x:Key="item58">Version du jeu non prise en charge par H1Emu.\n\nN'oubliez pas d'utiliser la version du jeu du 15 janvier 2015, du 22 décembre 2016 (Just Survive) ou du 23 février 2017 (King of the Kill).\n\nVous devez télécharger l'une de ces versions à l'aide de ce lanceur avec votre compte Steam qui appartient à Just Survive.</system:String>
     <system:String x:Key="item59">Nom d'utilisateur...</system:String>
     <system:String x:Key="item60">Mot de passe...</system:String>
     <system:String x:Key="item61">Voir tous les détails de la mise à jour...</system:String>
@@ -65,28 +65,30 @@
     <system:String x:Key="item68">Voir les fichiers...</system:String>
     <system:String x:Key="item69">• Version Du Jeu Non Détectée •</system:String>
     <system:String x:Key="item70">Détection de la version du jeu en cours...</system:String>
-    <system:String x:Key="item71">Version du jeu détectée : 15 janvier 2015</system:String>
+    <system:String x:Key="item71">Version du jeu détectée: 15 janvier 2015.</system:String>
     <system:String x:Key="item72">• Version Du Jeu Non Supportée •</system:String>
     <system:String x:Key="item73">Veuillez attendre la fin des tâches en cours.</system:String>
-    <system:String x:Key="item74">Version du jeu détectée : 22 décembre 2016</system:String>
+    <system:String x:Key="item74">Version du jeu détectée: 22 décembre 2016.</system:String>
     <system:String x:Key="item75">Directory</system:String>
     <system:String x:Key="item76">Suppression de l'ancien patch...</system:String>
     <system:String x:Key="item77">Code d'autorisation</system:String>
     <system:String x:Key="item78">Veuillez saisir le code d'authentification à deux facteurs envoyé à votre application Steam.</system:String>
     <system:String x:Key="item79">Veuillez saisir le code d'authentification à deux facteurs envoyé à votre adresse e-mail.</system:String>
-    <system:String x:Key="item80">Impossible de télécharger le fichier d'installation :</system:String>
+    <system:String x:Key="item80">Impossible de télécharger le fichier d'installation:</system:String>
     <system:String x:Key="item84">Impossible de trouver des dépôts à télécharger pour l'application. {0}</system:String>
     <system:String x:Key="item85">Dépôt {0} non listé pour l'application {1}</system:String>
     <system:String x:Key="item89">Le répertoire sélectionné n'est pas vide.\n\nVoulez-vous continuer quand même?</system:String>
     <system:String x:Key="item91">Traitement en cours...</system:String>
     <system:String x:Key="item92">OK</system:String>
     <system:String x:Key="item95">Une erreur s'est produite lors de l'installation du patch 2015:</system:String>
-    <system:String x:Key="item97">Une erreur s'est produite lors de l'installation du patch 2016:</system:String>
+    <system:String x:Key="item96">Une erreur s'est produite lors de l'installation du patch 2016:</system:String>
+    <system:String x:Key="item97">Une erreur s'est produite lors de l'installation du patch KotK:</system:String>
     <system:String x:Key="item99">Décompression des fichiers de correction...</system:String>
     <system:String x:Key="item100">Suppression d'un fichier .zip...</system:String>
     <system:String x:Key="item101">Terminé. (Temps écoulé:</system:String>
     <system:String x:Key="item102">Les fichiers de correction pour la version 2015 du jeu ont été installés.</system:String>
-    <system:String x:Key="item104">Les fichiers de correction pour la version 2016 du jeu ont été installés.</system:String>
+    <system:String x:Key="item103">Les fichiers de correction pour la version 2016 du jeu ont été installés.</system:String>
+    <system:String x:Key="item104">Les fichiers correctifs pour le KotK ont été installés.</system:String>
     <system:String x:Key="item105">Installation du dernier serveur...</system:String>
     <system:String x:Key="item107">Une erreur s'est produite lors de l'installation du dernier serveur:</system:String>
     <system:String x:Key="item108">Le dernier serveur a été installé.</system:String>
@@ -115,7 +117,7 @@
     <system:String x:Key="item136">Traducteurs</system:String>
     <system:String x:Key="item137">(Êtes-vous connecté à l'internet?)</system:String>
     <system:String x:Key="item138">\n\n(Les fichiers ne seront pas supprimés)</system:String>
-    <system:String x:Key="item139">Serveur H1Emu</system:String>
+    <system:String x:Key="item139">Serveurs H1Emu</system:String>
     <system:String x:Key="item140">Joueur unique</system:String>
     <system:String x:Key="item141">Nouveau serveur...</system:String>
     <system:String x:Key="item142">Exception levée:</system:String>
@@ -135,9 +137,7 @@
     <system:String x:Key="item157">La dernière version du serveur est une version de développement, sachez qu'elle peut être instable et provoquer des plantages.\n\nVoulez-vous continuer malgré tout?</system:String>
     <system:String x:Key="item158">Bienvenue sur H1Emu!</system:String>
     <system:String x:Key="item159">AVANT DE COMMENCER, veuillez noter que ce projet ne supporte que les versions de jeux suivantes:</system:String>
-    <system:String x:Key="item160">15th Janvier 2015</system:String>
     <system:String x:Key="item161">et</system:String>
-    <system:String x:Key="item162">22nd Décembre 2016</system:String>
     <system:String x:Key="item163">S'il vous plaît</system:String>
     <system:String x:Key="item164">NE PAS</system:String>
     <system:String x:Key="item165">utiliser la dernière version Steam du jeu ou toute autre version qui n'a pas été mentionnée ci-dessus car cela ne fonctionnera pas.</system:String>
@@ -165,4 +165,9 @@
     <system:String x:Key="item187">Si cette erreur persiste, essayez de télécharger et d'exécuter le fichier d'installation manuellement.</system:String>
     <system:String x:Key="item188">REMISE À JOUR</system:String>
     <system:String x:Key="item189">TUER</system:String>
+    <system:String x:Key="item190">Version du jeu détectée: 23 février 2017 (King of the Kill).</system:String>
+    <system:String x:Key="item191">Votre H1EmuLauncher a été réduit dans la barre d’état système.</system:String>
+    <system:String x:Key="item192">Supprimer</system:String>
+    <system:String x:Key="item193">Copie</system:String>
+    <system:String x:Key="item194">Sortie</system:String>
 </ResourceDictionary>
