--- a/H1EmuLauncher/Language/StringResources.pl-PL.xaml
+++ b/H1EmuLauncher/Language/StringResources.pl-PL.xaml
@@ -52,7 +52,7 @@
     <system:String x:Key="item55">Using app branch: {0}</system:String>
     <system:String x:Key="item56">Przetwarzam depot {0} - {1}</system:String>
     <system:String x:Key="item57">Wstępne przydzielanie miejsca na dysku...</system:String>
-    <system:String x:Key="item58">Wersja gry nie jest obsługiwana przez H1Emu.\n\nPamiętaj, aby użyć wersji gry 15 stycznia 2015 lub 22 grudnia 2016.\n\nMusisz pobrać jedną z tych wersji za pomocą tego programu uruchamiającego ze swoim kontem Steam, które jest właścicielem Just Survive.</system:String>
+    <system:String x:Key="item58">Wersja gry nie jest obsługiwana przez H1Emu.\n\nPamiętaj, aby użyć wersji gry z 15 stycznia 2015 r., 22 grudnia 2016 r. (Just Survive) lub 23 lutego 2017 r. (King of the Kill).\n\nMusisz pobrać jedną z tych wersji za pomocą tego programu uruchamiającego ze swoim kontem Steam, które jest właścicielem Just Survive.</system:String>
     <system:String x:Key="item59">Nazwa użytkownika...</system:String>
     <system:String x:Key="item60">Hasło...</system:String>
     <system:String x:Key="item61">Sprawdź pełen opis aktuzacji...</system:String>
@@ -65,10 +65,10 @@
     <system:String x:Key="item68">Obejrzyj pliki...</system:String>
     <system:String x:Key="item69">• Nie wykryto wersji gry •</system:String>
     <system:String x:Key="item70">Wykrywanie wersji gry...</system:String>
-    <system:String x:Key="item71">Wersja gry wykryta: 15 Styczeń 2015</system:String>
+    <system:String x:Key="item71">Wersja gry wykryta: 15 Styczeń 2015.</system:String>
     <system:String x:Key="item72">• Nie wspierana wersja gry •</system:String>
     <system:String x:Key="item73">Poczekaj na zakończenie bieżącego zadania.</system:String>
-    <system:String x:Key="item74">Wersja gry wykryta: 22 Grudzień 2016</system:String>
+    <system:String x:Key="item74">Wersja gry wykryta: 22 Grudzień 2016.</system:String>
     <system:String x:Key="item75">Ścieżka</system:String>
     <system:String x:Key="item76">Usuwanie starego Patcha...</system:String>
     <system:String x:Key="item77">Klucz Autoryzacji</system:String>
@@ -81,12 +81,14 @@
     <system:String x:Key="item91">Przetwarzanie...</system:String>
     <system:String x:Key="item92">OK</system:String>
     <system:String x:Key="item95">Wystąpił błąd podczas instalacji patcha dla wersji 2015:</system:String>
-    <system:String x:Key="item97">Wystąpił błąd podczas instalacji patcha dla wersji 2016:</system:String>
+    <system:String x:Key="item96">Wystąpił błąd podczas instalacji patcha dla wersji 2016:</system:String>
+    <system:String x:Key="item97">Wystąpił błąd podczas instalacji patcha dla wersji KotK:</system:String>
     <system:String x:Key="item99">Rozpakowywanie plików...</system:String>
     <system:String x:Key="item100">Usuwanie pliku .zip...</system:String>
     <system:String x:Key="item101">Zakończono. (Czas:</system:String>
     <system:String x:Key="item102">Zainstalowano patch dla wersji 2015.</system:String>
-    <system:String x:Key="item104">Zainstalowano patch dla wersji 2016.</system:String>
+    <system:String x:Key="item103">Zainstalowano patch dla wersji 2016.</system:String>
+    <system:String x:Key="item104">Pliki poprawek dla KotK zostały zainstalowane.</system:String>
     <system:String x:Key="item105">Instalowanie najnowszej wersji serwera...</system:String>
     <system:String x:Key="item107">Wystąpił bład podczas instalacji plików serwera:</system:String>
     <system:String x:Key="item108">Zainstalowano najnowszą wersję serwera.</system:String>
@@ -115,7 +117,7 @@
     <system:String x:Key="item136">Tłumacze</system:String>
     <system:String x:Key="item137">(Czy jesteś połączony z internetem?)</system:String>
     <system:String x:Key="item138">\n\n(Pliki nie zostaną usunięte)</system:String>
-    <system:String x:Key="item139">Serwer H1Emu</system:String>
+    <system:String x:Key="item139">Serwery H1Emu</system:String>
     <system:String x:Key="item140">Singleplayer</system:String>
     <system:String x:Key="item141">Nowy serwer...</system:String>
     <system:String x:Key="item142">Wystąpił błąd:</system:String>
@@ -135,9 +137,7 @@
     <system:String x:Key="item157">Najnowsza wersja serwera jest wersją rozwojową, ostrzegamy, że może być niestabilna i powodować awarie.\n\nCzy mimo to chcesz kontynuować?</system:String>
     <system:String x:Key="item158">Witaj w H1Emu!</system:String>
     <system:String x:Key="item159">ZANIM KLIKNIESZ DALEJ, wiedz że ten projekt wspiera następujące wersje gry:</system:String>
-    <system:String x:Key="item160">15th Styczeń 2015</system:String>
     <system:String x:Key="item161">oraz</system:String>
-    <system:String x:Key="item162">22nd Grudzień 2016</system:String>
     <system:String x:Key="item163">Nie</system:String>
     <system:String x:Key="item164">UŻYWAJ</system:String>
     <system:String x:Key="item165">najnowszej wersji pobranej ze Steam, ani żadnej innej nie wymienionej powyżej, nie będą one działać.</system:String>
@@ -165,4 +165,9 @@
     <system:String x:Key="item187">Jeśli ten błąd będzie się powtarzał, spróbuj ręcznie pobrać i uruchomić plik instalacyjny.</system:String>
     <system:String x:Key="item188">PONOWNE ŁATOWANIE</system:String>
     <system:String x:Key="item189">ZABIĆ</system:String>
+    <system:String x:Key="item190">Wykryto wersję gry: 23 lutego 2017 (King of the Kill).</system:String>
+    <system:String x:Key="item191">Twój H1EmuLauncher został zminimalizowany do zasobnika systemowego.</system:String>
+    <system:String x:Key="item192">Usuwać</system:String>
+    <system:String x:Key="item193">Kopiuj</system:String>
+    <system:String x:Key="item194">Wyjście</system:String>
 </ResourceDictionary>
