--- a/H1EmuLauncher/Windows/MessageBoxWindow.xaml
+++ b/H1EmuLauncher/Windows/MessageBoxWindow.xaml
@@ -124,7 +124,7 @@
                 <!-- Exit button -->
                 <Button x:Name="CloseButton"
                         Grid.Column="1"
-                        Click="CloseButton_Click"
+                        Click="CloseMessageBox"
                         RenderOptions.BitmapScalingMode="Fant"
                         Width="38"
                         Height="25"
@@ -176,7 +176,7 @@
                         <!-- Main message box text -->
                         <TextBlock x:Name="text"
                                Margin="25,10,25,10"
-                               Padding="0,5,0,0"
+                               Padding="0,5,0,10"
                                VerticalAlignment="Center"
                                HorizontalAlignment="Center"
                                Background="Transparent"
@@ -185,24 +185,24 @@
                                TextWrapping="Wrap"
                                TextAlignment="Center"/>
 
+                        <!-- Using a UniformGrid here to keep both buttons centered when the collapsed element is set to visible -->
                         <UniformGrid Grid.Row="1"
                                      Rows="1">
                             
-                            <!-- Close h1z1 process button -->
+                            <!-- Kill H1Z1 process button -->
                             <Button x:Name="killH1Z1Button"
-                                    Visibility="Collapsed"
                                     Click="CloseH1Z1"
                                     RenderOptions.BitmapScalingMode="Fant"
                                     Width="auto"
-                                    Padding="30,0,30,0"
+                                    Padding="40,0,40,0"
                                     Height="30"
                                     Margin="0,10,0,20"
-                                    VerticalAlignment="Center"
                                     HorizontalAlignment="Center"
                                     Foreground="White"
                                     FontFamily="Arial Black"
                                     FontSize="18"
                                     BorderThickness="0"
+                                    Visibility="Collapsed"
                                     Content="{DynamicResource item189}"
                                     Style="{DynamicResource StandardButton}"/>
 
@@ -210,10 +210,9 @@
                             <Button Click="OkButton"
                                     RenderOptions.BitmapScalingMode="Fant"
                                     Width="auto"
-                                    Padding="30,0,30,0"
+                                    Padding="40,0,40,0"
                                     Height="30"
                                     Margin="0,10,0,20"
-                                    VerticalAlignment="Center"
                                     HorizontalAlignment="Center"
                                     Foreground="White"
                                     FontFamily="Arial Black"
@@ -221,6 +220,7 @@
                                     BorderThickness="0"
                                     Content="{DynamicResource item92}"
                                     Style="{DynamicResource StandardButton}"/>
+                            
                         </UniformGrid>
                     </Grid>
                 </Border>
